2005-07-15 Magnus Hagdorn
 * erosion_sediment.f90: only use shear-yield stress type flow law, 
   integrate from base of deforming sed layer to top (rather than
   maximum depth), separate function to calculate yield stress, change
   argument of er_sediment_tstep
 * erosion_setup.f90: only have one flow law
 * erosion_transport.f90: change argument of er_sediment_tstep
 * erosion_types.f90: change default values of flow law, only use one
   flow law
 * plot_basal.py: fix bugs, only plot shear-yield stress type flow law
 * transport.tex: update docs

2005-07-15 Magnus Hagdorn
 * erosion_sediments.f90: combine flow laws in one subroutine
 * erosion_types.f90: increase number of params for flow law

2005-07-14 Magnus Hagdorn
 * Makefile.am: beautification
 * erosion_nc_custom.f90: not needed anymore since we use velo coords now
 * erosion_types.f90: removing sediment coordinate system
 * erosion_setup.f90: ditto
 * erosion.f90: ditto
 * erosion_transport.f90: ditto
 * erosion_vars.def: ditto
 * simple_erosion.f90: ditto
 * test_transport.f90: ditto

2005-07-14 Magnus Hagdorn
 * erosion_sediment.f90: new module handling deforming sediment layer
   using Geoffrey's theory.
 * Makefile.am: hook up new module
 * erosion_types.f90: added new type for deforming layer stuff
 * erosion_vars.def: save sediment velocities
 * erosion_transport_type.f90: removed sediment velos
 * erosion_transport.f90: hook up new sediment module, add thickness calcs,
   new routine for interpolation from velo to sed grid
 * erosion.f90: removed sed thickness calcs, hooked up new sediment module
 * erosion_setup.f90: read/display new RTP for sediment stuff
 * configure.in: require glimmer 0.5.3

2005-07-11 Magnus Hagdorn
 * more doc work

2005-07-04 Magnus Hagdorn
 src
 * renamed 2nmo routines to generic transport routines
 * Makefile.am: changed file names
 * erosion_types.f90: changed defaults to reasonable values
 tests
 * Makefile.am: run tests only on make check