@@ -23,7 +23,7 @@ sliding_law = 0
 vertical_integration = 1
 
 [time]
-tend = 2000000.
+tend = 200000.
 dt = 5.
 ntem = 1.
 nvel = 1.
@@ -35,8 +35,6 @@ geothermal = -42e-3
 basal_tract_const = 1.e-3
 
 [Erosion]
-ntime = 20
-grid_factor = 4
 
 [Transport]
 
@@ -47,7 +45,7 @@ comment: erosion + transport
 [CF output]
 name: er-transport1.nc
 frequency: 1000
-variables: thk bmlt temp uvel vvel bwat topg erate erosion seds1 seds2 seds3 taux tauy seds2_max accu
+variables: thk bmlt temp uvel vvel bwat topg erate erosion seds1 seds2 seds3 taux tauy seds2_max accu seds2_vx seds2_vy
 
 [CF input]
 name: topo.nc
